--- a/CodeMentor/Web.config
+++ b/CodeMentor/Web.config
@@ -4,6 +4,9 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+	<appSettings>
+		<add key="ConnectionString" value="server =.\SQLEXPRESS;database=CODEMENTOR; integrated security = true"/>
+	</appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.8" />
